new debug disabled values for kubernetes defaults on aws

--- a/envs/k8-debug.env
+++ b/envs/k8-debug.env
@@ -13,8 +13,9 @@ export ANTINEX_CORE_BROKER_URL=redis://redis-master:6379/6
 export FORWARD_BROKER_URL=redis://redis-master:6379/0
 export ENVIRONMENT=Development
 export DJANGO_CONFIGURATION=Development
-export DJANGO_DEBUG=no
-export DJANGO_TEMPLATE_DEBUG=no
+export DJANGO_SECRET_KEY=supersecret
+export DJANGO_DEBUG=yes
+export DJANGO_TEMPLATE_DEBUG=yes
 export HTTP_X_FORWARDED_PROTOCOL_KEY=HTTP_X_FORWARDED_PROTO
 export COLLECT_STATICS=1
 export CELERY_ENABLED=1
