--- a/envs/k8-splunk-debug.env
+++ b/envs/k8-splunk-debug.env
@@ -13,8 +13,9 @@ export ANTINEX_CORE_BROKER_URL=redis://redis-master:6379/6
 export FORWARD_BROKER_URL=redis://redis-master:6379/0
 export ENVIRONMENT=Development
 export DJANGO_CONFIGURATION=Development
-export DJANGO_DEBUG=no
-export DJANGO_TEMPLATE_DEBUG=no
+export DJANGO_SECRET_KEY=supersecret
+export DJANGO_DEBUG=yes
+export DJANGO_TEMPLATE_DEBUG=yes
 export HTTP_X_FORWARDED_PROTOCOL_KEY=HTTP_X_FORWARDED_PROTO
 export COLLECT_STATICS=1
 export CELERY_ENABLED=1
@@ -34,7 +35,16 @@ export ANTINEX_TLS_PROTOCOL=
 export ANTINEX_KEYFILE=
 export ANTINEX_CORE_NUM_WORKERS=1
 export DJANGO_ALLOWED_HOSTS=*
-export USE_ENV=k8
+export USE_ENV=k8-splunk
 export USE_VENV=/opt/venv
 export SHARED_DIR=/opt/data
-export SHARED_LOG_CFG=/opt/antinex/core/antinex_core/log/k8-logging.json
+export SHARED_LOG_CFG=/opt/antinex/core/antinex_core/log/k8-logging-splunk.json
+export SPLUNK_USER=trex
+export SPLUNK_PASSWORD=123321
+export SPLUNK_INDEX=antinex
+export SPLUNK_ADDRESS=splunk-svc:8088
+export SPLUNK_API_ADDRESS=splunk-svc:8089
+export SPLUNK_TCP_ADDRESS=splunk-tcp-svc:1514
+export SPLUNK_HANDLER_NAME=splunk
+export SPLUNK_VERIFY=1
+export SPLUNK_DEBUG=0
