--- a/envs/k8-splunk.env
+++ b/envs/k8-splunk.env
@@ -13,9 +13,8 @@ export ANTINEX_CORE_BROKER_URL=redis://redis-master:6379/6
 export FORWARD_BROKER_URL=redis://redis-master:6379/0
 export ENVIRONMENT=Development
 export DJANGO_CONFIGURATION=Development
-export DJANGO_SECRET_KEY=supersecret
-export DJANGO_DEBUG=yes
-export DJANGO_TEMPLATE_DEBUG=yes
+export DJANGO_DEBUG=no
+export DJANGO_TEMPLATE_DEBUG=no
 export HTTP_X_FORWARDED_PROTOCOL_KEY=HTTP_X_FORWARDED_PROTO
 export COLLECT_STATICS=1
 export CELERY_ENABLED=1
